fix header z-index

--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -5,6 +5,7 @@ header {
   position: sticky;
   top: 0;
   padding: 1rem;
+  z-index: 1;
 }
 
 header .container {
